--- a/build.xml
+++ b/build.xml
@@ -1,9 +1,9 @@
-<project name="Test" basedir="." default="main">
+<project name="GridRenderer" basedir="." default="main">
     <property name="src.dir"     value="src"/>
     <property name="build.dir"   value="build"/>
     <property name="classes.dir" value="${build.dir}/classes"/>
     <property name="jar.dir"     value="${build.dir}/jar"/>
-    <property name="main-class"  value="test.GridRenderer"/>
+    <property name="main-class"  value="gridRenderer.GridRenderer"/>
     <property name="lib.dir"     value="lib"/>
 
     <path id="classpath">
