Fix ant command parsing

--- a/build.xml
+++ b/build.xml
@@ -29,7 +29,7 @@
     </target>
 
     <target name="run" depends="jar">
-        <java fork="true" classname="${main-class}" executable="${jar.dir}/${ant.project.name}.jar">
+        <java fork="true" classname="${main-class}">
             <classpath>
                 <path refid="classpath"/>
                 <path location="${jar.dir}/${ant.project.name}.jar"/>
